--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "sri-lanka-law-college",
   "version": "1.1.2",
   "private": true,
-  "homepage": "https://mantisdashboard.io/ExamDepartment/dashboard",
+  "homepage": "https://mantisdashboard.io/NICValidation",
   "dependencies": {
     "@ant-design/colors": "^6.0.0",
     "@ant-design/icons": "^4.7.0",
